--- a/pages/styles/style.css
+++ b/pages/styles/style.css
@@ -21,7 +21,6 @@ body {
   font-size: 1.5rem;
   margin: 0;
   min-height: 100dvh;
-  overflow-x: hidden; /* Previne scroll horizontal indesejado */
   user-select: none;
   background-color: var(--white);
   color: var(--dark);
@@ -48,7 +47,7 @@ main.whitespace {
   align-items: center;
   justify-content: flex-end;
   position: relative;
-  padding: 3vh 1rem; /* Adiciona padding lateral para telas pequenas */
+  padding: 3vh 1rem; 
   gap: 3vh;
 }
 
@@ -153,7 +152,7 @@ body[data-theme='dark'] #bulb-img {
   bottom: 10px;
   left: 5%;  height: 11vmin;
   min-height: 40px;
-  transition: all var(--transition-fast);
+  transition: all var(--transition-medium);
 }
 
 /* --- ESTILOS DE MODAL (GERAL) --- */
@@ -203,7 +202,7 @@ body[data-theme='dark'] #bulb-img {
 }
 
 #modal-image {
-  max-width: 90vw; /* Ajustado para ser relativo à viewport */
+  max-width: 90vw;
   max-height: 80vh;
   object-fit: contain;
   transition: transform var(--transition-medium);
@@ -260,7 +259,7 @@ body[data-theme='dark'] #bulb-img {
 }
 
 /*
-   Media queryies
+   Media queries
 */
 @media (max-width: 650px) {
 
@@ -293,22 +292,24 @@ body[data-theme='dark'] #bulb-img {
   }
   
   .carpet-item {
-    height: 16vmin; 
     max-height: 70px; 
   }
 
   /* MEWO */
   .mewo-container img {
-    height: 14vmin;
+    height: 20vmin;
     max-height: 60px;
-    bottom: 5px;
-    left: 30%;
+    left: 35%;
     transform: translateX(-100%); 
+  }
+  .mewo-container{
+    height: fit-content;
+    width: fit-content;
   }
 
   #modal-image { max-height: 60vh; }
-  #prev-btn { left: 5px; } 
-  #next-btn { right: 5px; }
+  #prev-btn { left: -40px; } 
+  #next-btn { right: -40px; }
   .nav-arrow img { height: 25px; }
   .modal-close { font-size: 2rem; top: 5px; right: 10px; }
 }
